# RoutePlan

./: .env  .gitignore  README.md  compose.yaml  pyproject.toml
RoutesCalculatorService/: .dockerignore  Dockerfile  a_star.py  data_models.py  db_interface.py  kafka_consumer.py  main.py  requirements.txt
RoutesManagementService/: .dockerignore  Dockerfile  entrypoint.sh
RoutesManagementService/apps/ports/: models.py  serializers.py
RoutesManagementService/apps/routes/: admin.py  serializers.py  urls.py
RoutesManagementService/apps/tasks/: forms.py  kafka_producer.py  models.py  urls.py  views.py
RoutesManagementService/apps/users/: serializers.py  urls.py
RoutesManagementService/apps/vessels/: admin.py  serializers.py
RoutesManagementService/data/: segments_data.json
RoutesManagementService/project_config/: settings.py  urls.py
RoutesManagementService/templates/: base.html
RoutesManagementService/templates/tasks/: create_task_form.html  task_status.html
Services/RoutesCalculatorService/: data_models.py  db_interface.py  main.py
Services/RoutesCalculatorService/routeplan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Services/RoutesManagementService/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
ops/: compose.yaml
route_plan/app/: admin.py  models.py
route_plan/route_plan/: asgi.py  settings.py  urls.py  wsgi.py
route_plan/routes/: admin.py  models.py  urls.py
route_plan/templates/: base.html  index.html
route_plan/users/: admin.py  models.py
routeplan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+49 files in other folders)
