[project]
name = "routeplan"  
version = "0.1.0"
description = "Приложение которое будет считать расстояния между двумя морскими портами" 
dependencies = [
    "django>=5.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
]

requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "ruff",    
    "black",   
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88  
# target-version = ['py313'] 

# Конфигурация Ruff
[tool.ruff]
line-length = 88  

target-version = "py313"
